--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-
+REACT_APP_API_URL=http://localhost:3001/api
 PORT=3001
 REACT_APP_BACKEND_URL=https://api.render.com/deploy/srv-cqcada08fa8c73cm24lg?key=PjypN5YnKY0
